Lab 0 and 1 - class fields update